--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,16 @@
 %html
   %head
     %title Smudge
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold&subset=latin'
     = stylesheet_link_tag 'smudge'
-    = javascript_include_tag 'smudge'
+    = javascript_include_tag 'jquery', 'jquery.ui', 'smudge'
+    = yield :additional_javascript
     = csrf_meta_tag
   %body
-    = yield
+    #top
+    #header_wrapper
+      #header
+        %h1= link_to 'smudge', 'http://smudge.it'
+    #main_wrapper
+      #main
+        = yield
