pull in js + swf for websockets and flash fallback.

--- a/app/views/games/sketchpad.html.haml
+++ b/app/views/games/sketchpad.html.haml
@@ -1,5 +1,5 @@
 = content_for :additional_javascript do
-  = javascript_include_tag 'raphael', 'games/sketchpad'
+  = javascript_include_tag 'swfobject', 'FABridge', 'web_socket', 'raphael', 'games/sketchpad'
 
 %h2 Sketchpad
 #paper.box.sketchpad
