--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
   %head
-    %title Smudge
+    %title= [@title, 'Smudge'].compact.join(' - ')
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold&subset=latin'
     = stylesheet_link_tag 'smudge'
     = javascript_include_tag 'jquery', 'jquery.ui', 'smudge'
