Add game metrics.

--- a/app/views/games/sketchpad.html.haml
+++ b/app/views/games/sketchpad.html.haml
@@ -2,5 +2,10 @@
   = javascript_include_tag 'swfobject', 'FABridge', 'web_socket', 'raphael', 'games/sketchpad'
 
 %h2 Sketchpad
+.metric
+  Number of players:
+  #player_count ?
+.metric
+  Time left:
+  #countdown ?:??
 #paper.box.sketchpad
-  #countdown
