--- a/app/views/games/sketchpad.html.haml
+++ b/app/views/games/sketchpad.html.haml
@@ -1,6 +1,7 @@
 = content_for :additional_javascript do
   = javascript_include_tag 'swfobject', 'FABridge', 'web_socket', 'raphael', 'games/sketchpad'
 
+= like_buttons
 %h2 Sketchpad
 .metric
   Number of players:
@@ -8,4 +9,5 @@
 .metric
   Time left:
   #countdown ?:??
+
 #paper.box.sketchpad
