--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     = javascript_include_tag 'jquery', 'jquery.ui', 'smudge'
     = yield :additional_javascript
     = csrf_meta_tag
+    %meta{:name => "viewport", :content => "width=980px"}
   %body
     #top
     #header_wrapper
