--- a/public/stylesheets/smudge.css
+++ b/public/stylesheets/smudge.css
@@ -12,6 +12,8 @@ h1, h2, h3{
   padding: 0;
 }
 
+img{ border: 0 }
+
 hr{
   border: none;
   border-top: 3px solid #F5F5F5;
@@ -106,4 +108,35 @@ hr{
 
 #main .box.letters{
   margin-top: 0;
+}
+
+.game{
+  padding: 0.5em;
+}
+
+.game h3{
+  margin-bottom: 0.2em;
+}
+
+.game h3 a{
+  color: #000;
+  text-decoration: none;
+}
+
+.game img{
+  float: left;
+  padding: 1px;
+  border: 1px solid #eee;
+}
+
+.game .desc{
+  display: inline;
+  margin: 0.4em;
+}
+
+.game:after{
+  content: "";
+  display: block;
+  height: 0;
+  clear: both;
 }
