Application layout should use root_url.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     #top
     #header_wrapper
       #header
-        %h1= link_to 'smudge', 'http://smudge.it'
+        %h1= link_to 'smudge', root_url
     #main_wrapper
       #main
         = yield
